# brachyura

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  local_run.sh  run_tests.sh  start_local_run.sh  test_proxy.py  test_server.py
.github/workflows/: main.yml
local_run_env/: docker-compose.yaml
local_run_env/backend/: Dockerfile  backend.py  requirements.txt
local_run_env/grafana/dashboards/: dashboard.json
local_run_env/grafana/datasources/: prometheus.yaml
src/: client.rs  lib.rs  main.rs  metrics.rs  routing.rs  telemetry.rs
tests/: config.yaml  config_no_tls.yaml  integration_test.rs
tests/self-signed-cert/: test.crt  test.key
utilities/: README.md  origin.py  requirements.txt
utilities/local_run/: docker-compose.yaml
utilities/local_run/backend/: backend.py
utilities/local_run/prometheus/: prometheus.yaml
