[package]
name = "brachyura"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["http2"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
env_logger = "0.11.6"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
log = "0.4.25"
once_cell = "1.20.2"
prometheus = "0.13.4"
rustls = { version = "0.23.21", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
http = "1.2.0"
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
wiremock = "0.6"
