[package]
name = "brachyura"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["http2"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["grpc-tonic", "trace"] }
opentelemetry-stdout = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
prometheus = "0.14.0"
rustls = { version = "0.23.21", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.13.4", features = ["rustls"] }
wiremock = "0.6"
